<resources>
    <string name="app_name">Airport</string>
    <string name="title_activity_enter">EnterActivity</string>
    <string name="button_authorization">Authorization</string>
    <string name="button_registration">Registration</string>
    <string name="title_activity_authorization">Authorization</string>

    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="button_register">Register</string>
    <string name="button_authorize">Log in</string>

    <string name="login"> login </string>
    <string name="password"> password </string>
    <string name="passport"> passport </string>
    <string name="name">name</string>

    <string name="registration_input_erorr">Fill in all fields</string>
    <string name="wrong_pas_log">Password or login is incorrect</string>
    <string name="title_activity_client_menu">ClientMenuActivity</string>
    <string name="title_activity_root_menu">RootMenuActivity</string>
    <string name="title_activity_root_list">RootListActivity</string>

    <string name="root_menu_list">View all clients</string>
    <string name="client_list_header">Clients</string>

    <string name="delete_client">Delete client</string>
    <string name="edit_client">Edit client</string>
    <string name="Save_changes">Save changes</string>
    <string name="no_changes">No changes</string>
    <string name="element_was_updated">Element was updated</string>
    <string name="welcome">Welcome, </string>
    <string name="book_a_ticket">Book a ticket </string>


    <string name="title_activity_client__edit_">Client_Edit_Activity</string>

    <string name="press_on_me">Press on me</string>
    <string name="hide">Hide</string>

    <string name="title_activity_make_order">MakeOrderActivity</string>


    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cost">Cost</string>
    <string name="places">Places</string>

    <string name="choose_item">Choose item</string>

    <string name="total_cost">Total cost </string>
    <string name="order_is_accepted">Order is accepted </string>
    <string name="my_orders">My orders </string>
    <string name="return_ticket">Return ticket</string>
    <string name="return_all_tickets">Return all tickets</string>


</resources>
