<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:title="@string/press_on_me"
            android:textAlignment="center"
            android:background="@color/colorPrimary"
            />

        <TableLayout
            android:id="@+id/panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">


            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="27dp"
                    android:text="@string/from"
                    />
                <Spinner
                    android:id="@+id/panelSpinnerFrom"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginRight="15dp"
                    android:textSize="27dp"
                    />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="27dp"
                    android:text="@string/to"
                    />
                <Spinner
                    android:id="@+id/panelSpinnerTo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginRight="15dp"
                    android:textSize="27dp"
                    />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="27dp"
                    android:text="@string/cost"
                    />
                <EditText
                    android:id="@+id/panelEditTextCostLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textSize="27dp"
                    android:hint="0"
                    android:inputType="number"
                    android:maxLength="5"
                    android:text="0"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="27dp"
                    android:text="-"
                    />

                <EditText
                    android:id="@+id/panelEditTextCostHigh"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:textSize="27dp"
                    android:layout_height="wrap_content"
                    android:hint="9999"
                    android:inputType="number"
                    android:maxLength="6"
                    android:text="9999"
                    />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="27dp"
                    android:text="@string/places"
                    />

                <EditText
                    android:id="@+id/panelEditTextPlaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textSize="27dp"
                    android:hint="1"
                    android:text="1"
                     />

            </TableRow>


        </TableLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_make_order" />

</android.support.design.widget.CoordinatorLayout>
